dropshot/tests/fail/bad_trait_endpoint3.stderr
error[E0277]: the trait bound `String: SharedExtractor` is not satisfied
  --> tests/fail/bad_trait_endpoint3.rs:15:5
   |
15 |     #[endpoint {
   |     ^ the trait `SharedExtractor` is not implemented for `String`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Header<HeaderType>
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
   = note: required for `String` to implement `ExclusiveExtractor`
   = note: required for `(String,)` to implement `dropshot::extractor::common::RequestExtractor`
note: required by a bound in `ApiEndpoint::<StubContext>::new_for_types`
  --> src/api_description.rs
   |
   |     pub fn new_for_types<FuncParams, ResultType>(
   |            ------------- required by a bound in this associated function
...
   |         FuncParams: RequestExtractor + 'static,
   |                     ^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_for_types`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyApi>::Context>, String) -> impl Future<Output = Result<dropshot::HttpResponseUpdatedNoContent, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_endpoint3.rs:15:5
   |
10 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
15 | /     #[endpoint {
16 | |         method = GET,
17 | |         path = "/test",
18 | |     }]
19 | |     async fn bad_endpoint(
   | |_________________________^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyApi>::Context>, String) -> impl Future<Output = Result<dropshot::HttpResponseUpdatedNoContent, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_endpoint}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
